# sigstore-python

./: .bandit.yaml  .bump  .gitattributes  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  MANIFEST.in  Makefile  POLICY.md  README.md  cloudbuild.yaml  find_keywords.sh  mkdocs.yml  mypy.ini  output  pyproject.toml  q  setup.py  test_config_tiles.json  test_config_tiles_local_tsa.json  test_config_tiles_sigstage_tsa.json  test_sign.py  testing.sh  trust_config.json  trust_config_v2.json
.circleci/: config.yml
.github/: dependabot.yml  go.mod  go.sum  pull_request_template.md
.github/actions/upload-coverage/: action.yml
.github/workflows/: check-embedded-root.yml  ci.yml  conformance.yml  cross-os.yml  cross-version-verify.yaml  docs.yml  lint.yml  pin-requirements.yml  release.yml  requirements.yml  scorecards-analysis.yml  staging-tests.yml  test-with-setup-sigstore-env.yml  with-setup-sigstore-env.yml
docs/: index.md  installation.md  policy.md  signing.md  verify.md
docs/API/verify/: policy.md
docs/advanced/: custom_trust.md  offline.md
docs/api/: errors.md  hashes.md  index.md  models.md  oidc.md  sign.md  trust.md
docs/api/verify/: verifier.md
docs/scripts/: gen_ref_pages.py
docs/stylesheets/: custom.css
install/: requirements.in  requirements.txt
pysign/: __init__.py  __main__.py  _cli.py  _version.py
scripts/: gen_ref_pages.py
sigstore/: __init__.py  __main__.py  _api.py  _cli.py  _errors.py  _sign.py  _utils.py  _verify.py  _version.py  dsse.py  errors.py  hashes.py  models.py  newtype.py  newtypes.py  oidc.py  rekor.py  rekorv2.py  sign.py  timestamp.py  transparency.py  trust.py
sigstore/_internal/: __init__.py  checkpoint.py  ctfe.py  dsse.py  http.py  key_details.py  keyring.py  merkle.py  oidc.py  sct.py  set.py  timestamp.py  timestamping.py  trust.py  trustroot.py  tuf.py
sigstore/_internal/fulcio/: __init__.py  _client.py  client.py
sigstore/_internal/oidc/: __init__.py  ambient.py  issuer.py  oauth.py
sigstore/_internal/rekor/: __init__.py  _client.py  checkpoint.py  client.py  client_v2.py
sigstore/_internal/rekor/v2_types/: README.md
sigstore/_store/: __init__.py  ctfe.pub
sigstore/_store/https%3A%2F%2Ftuf-repo-cdn.sigstage.dev/: root.json  signing_config.v0.2.json  trusted_root.json
sigstore/_store/https%3A%2F%2Ftuf-repo-cdn.sigstore.dev/: signing_config.v0.2.json  trusted_root.json
sigstore/_store/prod/: signing_config.v0.2.json
sigstore/_store/staging/: root.json  trusted_root.json
sigstore/_verify/: __init__.py  models.py  policy.py  verifier.py
sigstore/dsse/: __init__.py  _predicate.py
sigstore/fulcio/: _client.py
sigstore/pysign/: __init__.py
sigstore/rekor/: __init__.py
sigstore/verify/: __init__.py  models.py  policy.py  verifier.py
test/: conftest.py  test_sign.py  test_store.py  test_utils.py  test_verify.py  test_version.py
test/assets/: a.dsse.staging-rekor-v2.txt  a.dsse.staging-rekor-v2.txt.sigstore.json  b.txt.crt  b.txt.sig  bad.txt  bundle.txt.ec_sig.sigstore  bundle.txt.ed25119_sig.sigstore  bundle.txt.sig  bundle.txt.sigstore  bundle_cve_2022_36056.txt  bundle_cve_2022_36056.txt.sigstore  bundle_invalid_version.txt  bundle_no_cert_v1.txt  bundle_no_cert_v1.txt.sigstore  bundle_no_checkpoint.txt  bundle_no_checkpoint.txt.sigstore  bundle_no_log_entry.txt.sigstore  bundle_v3_alt.txt  bundle_v3_github.whl  bundle_v3_github.whl.sigstore  bundle_v3_no_signed_time.txt  bundle_v3_no_signed_time.txt.sigstore.json  c.txt.crt  c.txt.sig  config.v1.rekorv2_local.json  example.bundle  offline-rekor.txt  offline-rekor.txt.sig  staging-rekor-v2.txt  staging-rekor-v2.txt.sigstore.json
test/assets/integration/: Python-3.12.5.tgz.sigstore  b.txt  bundle_v3.txt  bundle_v3.txt.sigstore
test/assets/integration/attest/: slsa_predicate_v0_2.json  slsa_predicate_v1_0.json
test/assets/signing_config/: signingconfig-only-v1-rekor.v2.json  signingconfig.v2.json
test/assets/staging-tuf/: 13.snapshot.json  13.targets.json  16.snapshot.json  17.targets.json  4.root.json  4.snapshot.json  4.targets.json  timestamp.json
test/assets/trust_config/: config.badtype.json  config.v1.json  staging-but-sign-with-rekor-v2.json
test/assets/trusted_root/: certificate_authority.empty.json  certificate_authority.json  certificate_authority.missingroot.json  trustedroot.badtype.json  trustedroot.v1.json  trustedroot.v1.local_tlog_ed25519_rekor-tiles.json
test/assets/tsa/: bundle.duplicate.sigstore  bundle.many_timestamp.sigstore  bundle.txt.late_timestamp.sigstore  bundle.txt.sigstore  ca.json  issue1482-message  issue1482-timestamp-with-no-cert  trust_config.json  trust_config.rekorv2_alpha.json
test/assets/x509/: bogus-leaf-invalid-eku.pem  bogus-leaf-invalid-ku.pem  bogus-leaf.pem  bogus-root-missing-ku.pem  bogus-root.pem  root-privkey.pem
test/integration/: sigstore-python-conformance
test/integration/cli/: conftest.py  test_attest.py  test_plumbing.py  test_sign.py  test_verify.py
test/internal/: test_ctfe.py  test_sct.py
test/internal/fulcio/: test_client.py
test/internal/oidc/: test_ambient.py
test/internal/rekor/: test_client.py
test/unit/: conftest.py  test_dsse.py  test_hashes.py  test_models.py  test_oidc.py  test_session_reuse.py  test_sign.py  test_store.py  test_transparency.py  test_utils.py  test_verify.py
test/unit/assets/: a.txt.crt  bad.txt.sig  bundle.txt.crt  bundle.txt.sig  bundle.txt.sigstore  bundle_cve_2022_36056.txt  bundle_cve_2022_36056.txt.sigstore  bundle_invalid_version.txt.sigstore  bundle_no_cert.txt.sigstore  bundle_no_checkpoint.txt.crt  bundle_no_checkpoint.txt.sigstore  bundle_no_log_entry.txt  bundle_v3_alt.txt.sigstore  c.txt  offline-rekor.txt.crt  offline-rekor.txt.rekor
test/unit/assets/prod-tuf/: 6.targets.json  76.snapshot.json  timestamp.json
test/unit/assets/staging-tuf/: 1.root.json  (+11 more)
test/unit/internal/: test_ctfe.py  test_key_details.py  test_sct.py  test_timestamping.py  test_trust.py  test_trust_root.py  test_tuf.py
test/unit/verify/: test_models.py  test_policy.py  test_verifier.py
test/verify/: test_policy.py  test_verifier.py
(+32 files in other folders)
